--- a/EjerciciosEventos2/app/src/main/res/layout/activity_main.xml
+++ b/EjerciciosEventos2/app/src/main/res/layout/activity_main.xml
@@ -12,11 +12,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Voy a contar tus clicks..."
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:text="Voy a contar tus clicks..." />
 
     <Button
         android:id="@+id/btn_click"
