--- a/EjercicioEventosEtiqueta/app/src/main/res/layout/activity_main.xml
+++ b/EjercicioEventosEtiqueta/app/src/main/res/layout/activity_main.xml
@@ -23,6 +23,7 @@
             android:textSize="@dimen/title_text_size"/>
 
         <RadioGroup
+            android:id="@+id/rd_group"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
