--- a/EjercicioEventosEtiqueta/app/src/main/res/layout/activity_main.xml
+++ b/EjercicioEventosEtiqueta/app/src/main/res/layout/activity_main.xml
@@ -54,7 +54,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:hint="@string/angle_hint"
-            android:inputType="number" />
+            android:inputType="numberSigned" />
 
     </LinearLayout>
 
