--- a/SaludoPersonalizado/app/src/main/res/values/dimens.xml
+++ b/SaludoPersonalizado/app/src/main/res/values/dimens.xml
@@ -3,4 +3,6 @@
     <dimen name="text_edit_width">280dp</dimen>
     <dimen name="button_margin_top">20dp</dimen>
     <dimen name="button_margin_bottom">80dp</dimen>
+    <dimen name="saludo_size">20sp</dimen>
+    <dimen name="general_padding">50dp</dimen>
 </resources>
