--- a/ComponentesBasicos/app/src/main/res/layout/activity_main.xml
+++ b/ComponentesBasicos/app/src/main/res/layout/activity_main.xml
@@ -180,6 +180,28 @@
             android:layout_height="wrap_content"
             android:timePickerMode="spinner" />
 
+        <!--informar al usuario del proceso de tareas asíncronas
+            'rellenar tiempos de espera'-->
+        <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+        <RatingBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:numStars="6"
+            android:rating="2"
+            android:stepSize="1"/>
+
+        <SeekBar
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:min="0"
+            android:max="10"
+            android:progress="1"
+            android:thumb="@drawable/sobre"
+            style="@style/Widget.AppCompat.SeekBar.Discrete"/>
+
     </LinearLayout>
 
 </ScrollView>
