--- a/SaludoPersonalizado/app/src/main/res/layout/activity_main.xml
+++ b/SaludoPersonalizado/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,7 @@
         android:id="@+id/txt_nombre"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:inputType="textCapWords"
         android:hint="@string/placeholder_name" />
 
     <EditText
