--- a/EjercicioSelectorColores/app/src/main/res/layout-land/activity_main.xml
+++ b/EjercicioSelectorColores/app/src/main/res/layout-land/activity_main.xml
@@ -1,71 +1,82 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
-    android:orientation="vertical"
+    android:columnCount="2"
+    android:rowCount="1"
+    android:orientation="horizontal"
     android:background="@color/light_grey">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textStyle="bold"
-        android:text="@string/titulo"/>
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_columnWeight="1"
+        android:gravity="center"
+        android:orientation="vertical">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textStyle="bold"
+            android:text="@string/titulo"/>
 
-    <SeekBar
-        android:id="@+id/red_bar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:min="0"
-        android:max="255"
-        android:progress="0"
-        android:background="@color/red"
-        android:paddingVertical="@dimen/seek_bar_vertical_padding"
-        android:layout_marginHorizontal="@dimen/general_horizontal_margin"
-        android:layout_marginTop="@dimen/general_top_margin"/>
+        <SeekBar
+            android:id="@+id/red_bar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:min="0"
+            android:max="255"
+            android:progress="0"
+            android:background="@color/red"
+            android:paddingVertical="@dimen/seek_bar_vertical_padding"
+            android:layout_marginHorizontal="@dimen/general_horizontal_margin"
+            android:layout_marginTop="@dimen/general_top_margin"/>
 
-    <SeekBar
-        android:id="@+id/green_bar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:min="0"
-        android:max="255"
-        android:progress="0"
-        android:background="@color/green"
-        android:paddingVertical="@dimen/seek_bar_vertical_padding"
-        android:layout_marginHorizontal="@dimen/general_horizontal_margin"
-        android:layout_marginTop="@dimen/general_top_margin"/>
+        <SeekBar
+            android:id="@+id/green_bar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:min="0"
+            android:max="255"
+            android:progress="0"
+            android:background="@color/green"
+            android:paddingVertical="@dimen/seek_bar_vertical_padding"
+            android:layout_marginHorizontal="@dimen/general_horizontal_margin"
+            android:layout_marginTop="@dimen/general_top_margin"/>
 
-    <SeekBar
-        android:id="@+id/blue_bar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:min="0"
-        android:max="255"
-        android:progress="0"
-        android:background="@color/blue"
-        android:paddingVertical="@dimen/seek_bar_vertical_padding"
-        android:layout_marginHorizontal="@dimen/general_horizontal_margin"
-        android:layout_marginTop="@dimen/general_top_margin"/>
+        <SeekBar
+            android:id="@+id/blue_bar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:min="0"
+            android:max="255"
+            android:progress="0"
+            android:background="@color/blue"
+            android:paddingVertical="@dimen/seek_bar_vertical_padding"
+            android:layout_marginHorizontal="@dimen/general_horizontal_margin"
+            android:layout_marginTop="@dimen/general_top_margin"/>
 
-    <SeekBar
-        android:id="@+id/alpha_bar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:min="0"
-        android:max="255"
-        android:progress="0"
-        android:background="@color/white"
-        android:paddingVertical="@dimen/seek_bar_vertical_padding"
-        android:layout_marginHorizontal="@dimen/general_horizontal_margin"
-        android:layout_marginTop="@dimen/general_top_margin"/>
+        <SeekBar
+            android:id="@+id/alpha_bar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:min="0"
+            android:max="255"
+            android:progress="0"
+            android:background="@color/white"
+            android:paddingVertical="@dimen/seek_bar_vertical_padding"
+            android:layout_marginHorizontal="@dimen/general_horizontal_margin"
+            android:layout_marginTop="@dimen/general_top_margin"/>
+    </LinearLayout>
+
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_columnWeight="1"
         android:layout_marginHorizontal="@dimen/general_horizontal_margin"
         android:layout_marginTop="@dimen/general_top_margin">
 
@@ -133,4 +144,4 @@
         android:layout_height="match_parent"
         android:layout_margin="@dimen/color_view_margin"/>
 
-</LinearLayout>
+</GridLayout>
