--- a/EjercicioSelectorColores/app/src/main/res/values/dimens.xml
+++ b/EjercicioSelectorColores/app/src/main/res/values/dimens.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="seek_bar_top_margin">10dp</dimen>
+    <dimen name="general_top_margin">10dp</dimen>
     <dimen name="seek_bar_vertical_padding">5dp</dimen>
+    <dimen name="general_horizontal_margin">10dp</dimen>
+    <dimen name="color_values_right_margin">8dp</dimen>
+    <dimen name="color_view_margin">10dp</dimen>
 </resources>
