Ejercicios de cambio de actividades

--- a/EjercicioSelectorColores/app/src/main/res/layout/activity_main.xml
+++ b/EjercicioSelectorColores/app/src/main/res/layout/activity_main.xml
@@ -63,74 +63,11 @@
         android:layout_marginHorizontal="@dimen/general_horizontal_margin"
         android:layout_marginTop="@dimen/general_top_margin"/>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="@dimen/general_horizontal_margin"
-        android:layout_marginTop="@dimen/general_top_margin">
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="@dimen/color_values_right_margin">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/red_text"/>
-            <TextView
-                android:id="@+id/txt_red_value"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="@dimen/color_values_right_margin">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/green_text"/>
-            <TextView
-                android:id="@+id/txt_green_value"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="@dimen/color_values_right_margin">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/blue_text"/>
-            <TextView
-                android:id="@+id/txt_blue_value"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="@dimen/color_values_right_margin">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/alpha_text"/>
-            <TextView
-                android:id="@+id/txt_alpha_value"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-        </LinearLayout>
-
-    </LinearLayout>
-
     <View
         android:id="@+id/view_color"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="@dimen/color_view_margin"/>
+        android:layout_margin="@dimen/color_view_margin"
+        android:onClick="onClickColorView"/>
 
 </LinearLayout>
