--- a/EjercicioSelectorColores/app/src/main/res/values/dimens.xml
+++ b/EjercicioSelectorColores/app/src/main/res/values/dimens.xml
@@ -5,4 +5,7 @@
     <dimen name="general_horizontal_margin">10dp</dimen>
     <dimen name="color_values_right_margin">8dp</dimen>
     <dimen name="color_view_margin">10dp</dimen>
+    <dimen name="color_text_size">20sp</dimen>
+    <dimen name="general_color_view_padding">20dp</dimen>
+    <dimen name="return_button_width">250dp</dimen>
 </resources>
