--- a/RecyclerViewProject/app/src/main/res/layout/activity_main.xml
+++ b/RecyclerViewProject/app/src/main/res/layout/activity_main.xml
@@ -11,8 +11,8 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="My Recycler View"
-        android:textSize="20sp"
+        android:text="@string/title_str"
+        android:textSize="@dimen/title_font_size"
         android:textStyle="bold"
         android:layout_gravity="center"/>
 
