--- a/RecyclerViewProject/app/src/main/res/layout/fragment_card.xml
+++ b/RecyclerViewProject/app/src/main/res/layout/fragment_card.xml
@@ -45,8 +45,14 @@
                 android:layout_gravity="bottom|right">
 
                 <TextView
+                    android:id="@+id/animal_txt_check"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:textSize="20sp"
+                    android:layout_marginRight="10dp"
+                    android:textColor="#28ED0F"
+                    android:text="✔"
+                    android:visibility="gone"/>
 
                 <Button
                     android:id="@+id/see_animal_button"
