--- a/BiblioTeisAndroid/app/src/main/res/layout/login.xml
+++ b/BiblioTeisAndroid/app/src/main/res/layout/login.xml
@@ -11,7 +11,8 @@
         android:background="@drawable/border_background"
         android:gravity="center_horizontal"
         android:orientation="vertical"
-        android:padding="20dp">
+        android:padding="20dp"
+        android:layout_marginHorizontal="6dp">
 
         <TextView
             android:layout_width="wrap_content"
@@ -55,7 +56,8 @@
             <EditText
                 android:id="@+id/password_input"
                 android:layout_width="@dimen/form_input_width"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent"
+                android:inputType="textPassword"/>
 
         </LinearLayout>
 
