--- a/BiblioTeisAndroid/app/src/main/res/values/dimens.xml
+++ b/BiblioTeisAndroid/app/src/main/res/values/dimens.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="title_size">45sp</dimen>
-    <dimen name="form_label_size">25sp</dimen>
+    <dimen name="form_label_size">30sp</dimen>
     <dimen name="form_input_width">200dp</dimen>
     <dimen name="button_text_size">25sp</dimen>
+    <dimen name="book_card_title_size">10sp</dimen>
 </resources>
